Fix for collapsed width in nested components

--- a/test/flex.expect.css
+++ b/test/flex.expect.css
@@ -1,5 +1,6 @@
 .container > *, .container > ::slotted(*) {
-	flex-grow: 1;
+	--grow: 1;
+	flex-grow: var(--grow);
 	flex-basis: 0;
 	flex-basis: 100%;
 }
